attempt at fixing navbar scrolling on mobiles

--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -16,6 +16,12 @@ nav.navbar {
         border-color: white;
 }
 
+@media only screen and (max-width: 600px) {
+    .set-height {
+        height: 50vh;
+        overflow-y: scroll;
+    }
+}
 
 
 /* NABAR DROPDOWNS */
